<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:gravity="bottom"
    android:background="@drawable/pic1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:background="#ccdadada">
            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/left"
                    android:clickable="false"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="285dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"
                    android:textStyle="bold"
                    android:id="@+id/account_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_title"
                    />
                <TextView
                    android:layout_marginLeft="15dp"
                    android:id="@+id/account_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_number"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_marginLeft="15dp"
                        android:id="@+id/available_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_available"/>
                    <TextView
                        android:layout_marginLeft="15dp"
                        android:id="@+id/available_amount_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_amount_value"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/right"
                    android:clickable="false"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>